# fartman

./: .gitignore  CMakeLists.txt  Makefile  readme.md
cmake/: deps.cmake
docs/.obsidian/: workspace.json
docs/Excalidraw/: classroom.excalidraw.md
docs/characters/: fartman.md  girlfriend.md  girlfriend?.md  parent.md  pichi lanjoduku.md  principal.md
docs/fouthwall/: capabilities bar.md  naughty level.md  suspicion bar.md
docs/places/: classroom.md  readme.md  varanda.md  varanda??.md
docs/timeline/: readme.md
src/: main.cpp
